<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Livrizon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Категории</string>
    <string name="new_text">Новое</string>
    <string name="append">Добавить</string>
    <string name="messenger">Мессенджер</string>
    <string name="profile">Профиль</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="Next">Далее</string>
    <string name="Previous">Previous</string>
    <string name="DoNotChoose">Не указывать</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="company_name">Livrizon</string>
    <string name="Enter">Войти</string>
    <string name="Subscribe">Подписаться</string>
    <string name="Unsubscribe">Отписаться</string>
    <string name="All">Все</string>
    <string name="Mutual">Общие</string>
    <string name="Networking">Нетворкинг</string>
    <string name="Find_worker">Поиск специалистов</string>
    <string name="Find_vacancy">Вакансии</string>
    <string name="News">Новости</string>
    <string name="Polls">Опросы</string>
    <string name="ProfileStatistics">Статистика профиля</string>
    <string name="PossibleUser">Возможные связи</string>
    <string name="Recommend">Рекомендуем</string>
    <string name="Popular">Популярное</string>
    <string name="Teams">Комманды</string>
    <string name="Communities">Сообщества</string>
    <string name="Confirm">Подтвердить</string>
    <string name="EnterInAccount">Вход в аккаунта</string>
    <string name="IncorrectRegistrationData">Введененные данные регистрации связаны с другим аккаунтом. Для того чтобы войти в данный аккаунт введите пароль</string>
    <string name="MyPage">Моя страница</string>
    <string name="Change">Применить</string>
    <string name="Registration">Зарегистрироваться</string>
    <string name="Politics">Политика</string>
    <string name="More">Еще</string>
    <string name="GeneralNews">Общие новости</string>
    <string name="Technologies">Технологии</string>
    <string name="Health">Здоровье</string>
    <string name="Business">Бизнесс</string>
    <string name="Сompanies">Компании</string>
    <string name="Art">Искусство</string>
    <string name="Sciences">Науки</string>
    <string name="Industries">Отрасли</string>
    <string name="Entertainments">Развлечения</string>
    <string name="Details">Подробности</string>
    <string name="Catalog">Каталог</string>
    <string name="Search">Поиск</string>
    <string name="Favorite">Избранное</string>
    <string name="Media">Медиа</string>
    <string name="Admin">Admin</string>
    <string name="Owner">Owner</string>
    <string name="onlin">online</string>
    <string name="Important">Важные</string>
    <string name="Education">Образование</string>
    <string name="Experience">Опыт работы</string>
    <string name="ReadyToCooperate">Готов к сотрудничеству</string>
    <string name="AboutYourself">О себе</string>
    <string name="GeneralInformation">Общие сведенья</string>
    <string name="Peoples">Люди</string>
    <string name="User">Пользователь</string>
    <string name="UserRegistrationDescription">Подходит для людий активно ищущих новые связи, работу, имеет перспек стартап идеи или же те кто просто хочет делиться своим мнением</string>
    <string name="Recruiter">Рекрутор</string>
    <string name="RecruiterRegistrationDescription">Подходит для специалист, который занимается подбором персонала на вакансии в компании</string>
    <string name="Company">Компания</string>
    <string name="CompanyRegistrationDescription">Подходит для компаний, котрые активтовно продвигают свою продукцию и ищят новых сотрудников и полездные свзяи</string>
    <string name="ProfileEditInformationHeader">Личная информация</string>
    <string name="ProfileEditInformationHeaderDescription">Это поможет вашим знакомым и гостям вашей страницы лучше узнать вас</string>
    <string name="ProfileEditInformationChooseCity">Город проживания</string>
    <string name="ProfileEditInformationGender">Ваш пол</string>
    <string name="MaleGenderVerb">Мужской</string>
    <string name="FemaleGenderVerb">Женский</string>
    <string name="TellDetails">Расскажите подробности о себе</string>
    <string name="AccountDescription">Описание аккаунта</string>
    <string name="TellStudy">Укажите, где вы учились</string>
</resources>