<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_new"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/new_text"/>

    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/category"/>

    <item
        android:id="@+id/nav_append"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/append"/>
    <item
        android:id="@+id/nav_messenger"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/messenger"/>
    <item
        android:id="@+id/nav_prof"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/profile"/>

</menu>
